--- a/package.json
+++ b/package.json
@@ -13,53 +13,58 @@
     "db:push": "drizzle-kit push",
     "db:seed": "drizzle-kit seed",
     "db:drop": "drizzle-kit drop",
-    "db:inspect": "drizzle-kit inspect"
+    "db:introspect": "drizzle-kit introspect"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@neondatabase/serverless": "^0.10.3",
+    "@neondatabase/serverless": "^0.10.4",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@tanstack/react-query": "^5.59.20",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.3",
+    "@tanstack/react-query": "^5.62.7",
     "@upstash/redis": "^1.34.3",
-    "better-auth": "^0.8.1-beta.5",
-    "class-variance-authority": "^0.7.0",
+    "better-auth": "^1.0.20",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.1",
-    "hono": "^4.6.9",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.36.4",
+    "hono": "^4.6.14",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-hook-form": "^7.53.2",
-    "resend": "^4.0.1-alpha.0",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.5.4",
+    "next": "15.1.0",
+    "next-themes": "^0.4.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.1",
+    "resend": "^4.0.1",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1",
-    "wrangler": "^3.86.0",
-    "zod": "^3.23.8"
+    "vaul": "^1.1.2",
+    "wrangler": "^3.95.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.14.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.28.0",
-    "eslint": "^9",
-    "eslint-config-next": "^15.0.3",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@types/node": "^20.17.10",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
+    "drizzle-kit": "^0.28.1",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
